overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .blue-gradient {
     background: linear-gradient(270.38deg, #0884CC -29.13%, #3AB6FE 99.67%);
 }
